--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/chat.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     },
     {
@@ -12,8 +12,8 @@
   ],
   "routes": [
     {
-      "src": "/api/chat",
-      "dest": "/api/chat.py"
+      "src": "/api/index",
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.+\\.[a-z]+)$",
