--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Flask==2.0.1
 Werkzeug==2.0.1
 Flask-Cors==3.0.10
-openai==0.27.8
+openai>=1.0.0
 python-dotenv==1.0.0
 gunicorn==20.1.0
 requests==2.28.2
+quart>=0.19.0
+hypercorn>=0.16.0
+asgiref>=3.7.0
