--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-Flask==2.0.1
-Werkzeug==2.0.1
+Flask>=2.0.1,<2.1.0
+Werkzeug>=2.0.1,<2.1.0
 Flask-Cors==3.0.10
 openai>=1.0.0
 python-dotenv==1.0.0
 gunicorn==20.1.0
 requests==2.28.2
-quart>=0.19.0
 hypercorn>=0.16.0
 asgiref>=3.7.0
